refactor(model): 모델 수정
- 이름으로 찾는게 아닌 참조를 통해 검색
- 기타 코드 리팩토링